Add API docs for /proxy
Related to #6
